--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
    <h1> Odin Recipes</h1> 
-   <a href="recipes/lasagna.html"> Lasagna</a>
+
+   <ul>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/Pizza.html">Pizza 2</a></li>
+    <li><a href="recipes/spammas.html">Spam Masubi</a></li>
+  </ul>
+
 </body>
 </html>
